fix vertical align for month view styles

--- a/src/resources/postcss/views/skeleton/month/_calendar-event.pcss
+++ b/src/resources/postcss/views/skeleton/month/_calendar-event.pcss
@@ -76,6 +76,10 @@
 
 	.tribe-events-calendar-month__calendar-event-tooltip-datetime {
 		margin-bottom: var(--spacer-0);
+
+		> * {
+			vertical-align: middle;
+		}
 	}
 
 	.tribe-events-calendar-month__calendar-event-tooltip-datetime-featured-icon,
